--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.24.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-calendar": "^3.5.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
